# openstream-server

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationManager.cpp  ConfigurationManager.h  LICENSE  README.md  auto_start.cpp  launcher.cpp  launcher.h  main.cpp  mainwindow.cpp  openstreamapp.qrc
AutoLoginTaskSchedulerProject/: AutoLoginTaskSchedulerProject.csproj  AutoLoginTaskSchedulerProject.sln  Program.cs
assets/: encoder.conf  h264AMDAMF.conf  h264CPU.conf  h264NVENC.conf  h265AMDAMF.conf  h265CPU.conf  h265NVENC.conf  sunshine.conf
headers/: ConfigurationDialog.h  auth_listener_worker.h  auto_start.h  auto_start_task_schedule.h  launcher.h
installer/: REAMDE.md
installer/config/: ViGEmBusSetup_x64.msi  config.xml
openstreamapp/: ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationManager.cpp  ConfigurationManager.h  VideoEncoderEnum.h  auth_listener_worker.cpp  auth_pin_handler.cpp  auth_pin_handler.h  auto_start.cpp  auto_start.h  h264amdamfconfigurationdialog.cpp  h264amdamfconfigurationdialog.h  h264amdamfconfigurationdialog.ui  h264cpuconfigurationdialog.cpp  h264cpuconfigurationdialog.h  h264cpuconfigurationdialog.ui  h264nvencconfigurationdialog.cpp  h264nvencconfigurationdialog.h  h264nvencconfigurationdialog.ui  h265amdamfconfigurationdialog.cpp  h265amdamfconfigurationdialog.h  h265amdamfconfigurationdialog.ui  h265configurationdialog.cpp  h265configurationdialog.h  h265configurationdialog.ui  h265nvencconfigurationdialog.cpp  h265nvencconfigurationdialog.h  h265nvencconfigurationdialog.ui  launcher.h  main.cpp  openstreammainwindow.cpp  openstreammainwindow.h  openstreammainwindow.ui  set_priority_class.cpp  set_priority_class.h
openstreamhost/: CMakeLists.txt  README.md  appveyor.yml  openstreamhost.service.in
openstreamhost/openstreamhost/: config.cpp  config.h  input.cpp  input.h  main.cpp  main.h  nvhttp.cpp  nvhttp.h  rtsp.cpp  stream.cpp  video.cpp  video.h
openstreamhost/openstreamhost/platform/: common.h
openstreamhost/openstreamhost/platform/linux/: input.cpp
openstreamhost/openstreamhost/platform/windows/: audio.cpp  display.h  display_base.cpp  display_ram.cpp  display_vram.cpp  input.cpp
openstreamhost/sunshine/: audio.cpp  input.cpp  main.h  nvhttp.cpp  process.cpp
openstreamhost/sunshine/platform/linux/: display.cpp
openstreamhost/sunshine/platform/windows/: audio.cpp  display_base.cpp  display_ram.cpp  display_vram.cpp  input.cpp
openstreamhost/tools/: CMakeLists.txt  audio.cpp  dxgi.cpp
sources/: ConfigurationDialog.cpp  ConfigurationManager.cpp  auth_listener_worker.cpp  auth_pin_handler.cpp  auto_start.cpp  launcher.cpp  main.cpp  set_priority_class.cpp
